# LLTA

./: .gitignore  AiAgentUsage.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  FindHIGHS.cmake  LLTA.cpp  README.md  config.sh
.ai/: ANALYSIS_DESIGN.md  ARCHITECTURE.md  CODING_RULES.md  ESP32C6_RESEARCH_PLAN.md  ESP32C_GREYBOX_PLAN.md  MAINTENANCE_PROTOCOL.md  PROJECT_MAP.md  TECH_STACK.md
.documentation/: ARCHITECTURE.md  FRAM_SOUNDNESS_FIX.md  PROJECT_MAP.md  USAGE_GUIDE.md
Models/ESP32-C6/: results.csv
clang-plugin/: CMakeLists.txt  LoopBoundPlugin.cpp  README.md  test_plugin.sh
clang-plugin/examples/: .gitignore  loop_bound_example.c  simple_test.c
cmake/: FindGUROBI.cmake  FindHIGHS.cmake
docs/: DESIGN_GUIDELINES.md  LibraryCallCosting.md  OVERVIEW.md  TargetAssumptions.md
docs/Architecture/: LLVMTA_LLTA_Comparison.md  NewAnalysis.md
examples/: CMakeLists.txt  README.md  gurobi_optional_example.c
examples/optimizer_tests/: CMakeLists.txt  build_example.sh  highs_optional_example.c
include/: TimingAnalysisResults.h
include/Analysis/: AbstractAnalysable.h  AbstractAnalysis.h  AbstractState.h  AbstractStateGraph.h  GraphAdapter.h  HardwareStrategies.h  InstructionCacheAnalysis.h  MicroArchitectureAnalysis.h  PipelineAnalysis.h  README.md  SystemState.h  WorklistSolver.h
include/Analysis/Cache/: CacheAccessMapper.h  CacheAnalysis.h  CacheEvent.h  CacheGeometry.h  CacheState.h  FRAMAccessMapper.h  ReplacementPolicy.h
include/Analysis/Callbacks/: AbstractStateGraphCallback.h  CallBacks.md  CallbackManager.h  ConstraintGenerationCallback.h  DebugLoggingCallback.h  EdgeJoinabilityCallback.h  VisualizationCallback.h  WeightProvider.h
include/Analysis/Targets/: MSP430Latency.h
include/Graph/: ProgramGraph.h
include/ILP/: AbstractGurobiSolver.h  AbstractHighsSolver.h  AbstractILPSolver.h  GurobiSolver.h  HighsSolver.h  ILPSolver.h
include/MIRPasses/: AdressResolverPass.h  AsmDumpAndCheckPass.h  CallSplitterPass.h  DebugIRPass.h  FillMuGraphPass.h  InstructionLatencyPass.h  MachineLoopBoundAgregatorPass.h  Mir2IrPass.h  PathAnalysisPass.h  StartFunction.h  TimingAnalysisPasses.h  WCETAnalysisPipeline.h
include/Pipeline/: HardwarePipeline.h  README.md
include/RTTargets/: MuArchStateGraph.h  ProgramGraph.h
include/RTTargets/MSP430/: MSP430MuArchState.h
include/Solver/: WorklistSolver.h
include/Targets/: RTTarget.h  TargetRegistry.h
include/Targets/MSP430/: FRAMCacheAnalysisPass.h  FRAMWaitStatePass.h  MSP430FR5994Target.h  MSP430Options.h  MSP430Pipeline.h  MSP430Target.h
include/Utility/: DataMemoryAccess.h  InstructionWords.h  Options.h
include/llta/Analysis/: AbstractAnalysis.h  AbstractState.h  WorklistSolver.h
lib/: CMakeLists.txt  TimingAnalysisResults.cpp
lib/Analysis/: AbstractAnalysis.h  AbstractStateGraph.cpp  CMakeLists.txt  GraphAdapter.cpp  HardwareStrategies.cpp  InstructionCacheAnalysis.cpp  PipelineAnalysis.cpp  SystemState.cpp  WorklistSolver.cpp  WorklistSolver.h
lib/Analysis/Cache/: CacheAnalysis.cpp  FRAMAccessMapper.cpp
lib/Analysis/Callbacks/: CallbackManager.cpp  ConstraintGenerationCallback.cpp  DebugLoggingCallback.cpp  EdgeJoinabilityCallback.cpp  VisualizationCallback.cpp
lib/Analysis/Targets/: MSP430Latency.cpp
lib/Graph/: CMakeLists.txt  ProgramGraph.cpp
lib/ILP/: AbstractGurobiSolver.cpp  AbstractHighsSolver.cpp  CMakeLists.txt  GurobiSolver.cpp  HighsSolver.cpp  ILPSolver.cpp
lib/MIRPasses/: AccessAnalyses.cpp  AdressResolverPass.cpp  AsmDumpAndCheckPass.cpp  CMakeLists.txt  CallSplitterPass.cpp  DebugIRPass.cpp  FRAMCacheAnalysisPass.cpp  FRAMWaitStatePass.cpp  FillMuGraphPass.cpp  InstructionLatencyPass.cpp  MachineLoopBoundAgregatorPass.cpp  Mir2IrPass.cpp  PathAnalysisPass.cpp  StartFunction.cpp  TimingAnalysisPasses.cpp  WCETAnalysisPipeline.cpp
lib/Pipeline/: CMakeLists.txt  HardwarePipeline.cpp
lib/RTTargets/: CMakeLists.txt  MuArchStateGraph.cpp  ProgramGraph.cpp
lib/RTTargets/MSP430/: MSP430MuArchState.cpp  MSP430Pipeline.cpp
lib/Targets/: CMakeLists.txt  TargetRegistry.cpp
lib/Targets/ESP32-C6/: ESP32-C6-Assumptions.md
lib/Targets/MSP430/: ABI_FINDINGS.md  FRAMCacheAnalysisPass.cpp  FRAMWaitStatePass.cpp  FRAM_FINDINGS.md  MSP430FR5994Target.cpp  MSP430Options.cpp  MSP430Pipeline.cpp  MSP430Target.cpp
lib/Utility/: CMakeLists.txt  DataMemoryAccess.cpp  InstructionWords.cpp  Options.cpp
scripts/: create_llvm_patch.sh  derive_abi_costs.py  download_MSP430.sh  download_highs.sh  llvm-20.1.8-custom.patch
tests/: Readme.md  cfg_baselines.json  cfg_test.py  generate_loop_bounds.sh  regression_test.py  solver_benchmark.py  solver_benchmark_raw.csv  solver_benchmark_summary.csv  solver_benchmark_table.tex
tests/cfg/: gotoloop.c  indirect.c  multicall.c  multiret.c  mutual_recursion.c  mutual_recursion3.c  mutual_recursion_anka.c  mutual_recursion_loop.c  mutual_recursion_unbounded.c  nestedloops.c  noreturn.c  recursion_linear.c  recursion_simple.c  recursion_unbounded.c  selfloop.c  shiftloop.c  switchcase.c  trivial.c
tests/msp430/: Makefile  build-suite.sh  build_all.sh  regression_baselines.json
tests/msp430/blink/: msp.elf  msp.elf.dump  msp.hex  msp.ll  msp.ll.dbg
tests/msp430/build_cnt/: cnt.dump  cnt.elf  cnt.ll  cnt.loop_bounds.json  cnt.opt.ll  cnt.wcet
tests/msp430/cnt/: cnt.c  cnt.c.loop_bounds.json  msp.elf  msp.elf.dump  msp.hex  msp.ll  msp.ll.dbg  msp.s
tests/msp430/cover/: cover.c  cover.c.loop_bounds.json  msp.elf  msp.elf.dump  msp.hex  msp.ll  msp.ll.dbg
tests/srcMaelardalen/: bs.c  bsort100.c  cnt.c  compress.c  crc.c  dijkstra.c  duff.c  edn.c  expint.c  fft1.c  fibcall.c  fir.c  insertsort.c  janne_complex.c  jfdctint.c  lcdnum.c  lms.c  ludcmp.c  matmult.c  minver.c  ndes.c  ns.c  nsichneu.c  prime.c  qsort-exam.c  qurt.c  recursion.c  select.c  sqrt.c  statemate.c  ud.c  whet.c
tests/unit/: CMakeLists.txt  CacheModuleTests.cpp  ILPSolverTests.cpp  MachineFunctionGraphTests.cpp  ProgramGraphTests.cpp
todo/include/MIRPasses/: AccessAnalyses.h
todo/lib/MIRPasses/: AccessAnalyses.cpp  Mir2IrPass.cpp
